@@ -1,5 +1,5 @@
 project(wxmaxima)
-set(VERSION 19.03.0-DevelopmentSnapshot)
+set(VERSION 19.03.1)
 set(PACKAGE_VERSION ${VERSION})
 set(GITVERSION ${VERSION})
 set(PACKAGE wxMaxima)
