@@ -5,6 +5,7 @@ Current:
    in the worksheet.
  * Removed an unneeded "maxima has finished calculating" on startup.
  * Many small bug fixes.
+ * wxWidgets >= 3.1.0: Corrected the toolbar icon size.
 
 19.03.0:
  * The ESC sequences for inputting symbols now use autocompletion.
